plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '6.0.+'
    id 'java'
}

group = 'com.SoloLevelingSystem'
version = '1.0.0'

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
    withSourcesJar()
}

base {
    archivesName = 'solo_leveling_system'
}

minecraft {
    mappings channel: 'official', version: '1.20.1'

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'java.base/java.lang', 'ALL-UNNAMED'
            property 'java.base/java.lang.reflect', 'ALL-UNNAMED'

            mods {
                solo_leveling_system {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'java.base/java.lang', 'ALL-UNNAMED'
            property 'java.base/java.lang.reflect', 'ALL-UNNAMED'
            args '--nogui'

            mods {
                solo_leveling_system {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

repositories {
    mavenCentral()
    maven {
        url = 'https://maven.minecraftforge.net/'
        name = 'Forge'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-47.3.0"
    implementation fg.deobf('net.minecraftforge:forge:1.20.1-47.3.0')
}

jar {
    manifest {
        attributes([
                'Specification-Title': 'solo_leveling_system',
                'Specification-Vendor': 'plonco',
                'Specification-Version': '1',
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Implementation-Vendor': 'plonco',
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'FMLModType': 'GAMELIBRARY'
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:deprecation'
    options.compilerArgs << '-Xlint:unchecked'
}

// Configuración específica para la compilación de Java
tasks.named('compileJava') {
    options.compilerArgs += [
            '--add-exports', 'java.base/sun.security.util=ALL-UNNAMED',
            '--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}

// Configuración del entorno de desarrollo
tasks.named('eclipse') {
    jdt {
        javaRuntimeName = 'JavaSE-17'
    }
}

tasks.named('idea') {
    module {
        inheritOutputDirs = true
    }
}